--- a/dt/templates/dt/index.html
+++ b/dt/templates/dt/index.html
@@ -1,9 +1,125 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>maingmao</title>
-    </head>
-    <body>
-        <h1>maingmao</h1>
-    </body>
-</html>
+{% extends 'base.html'%}
+
+{% block content %}
+
+<div class = 'container-fluid'>
+  <h3 class = 'm-4'>Touts les demandes</h3>
+  <div class = 'row'>
+    <div class = 'col-12'>
+       {% if all_work_request %}
+       <div class="card">
+        <div class="card-body">
+          <h5 class="card-title"><i class="fa fa-list fa-lg" aria-hidden="true"></i> Tout les demandes</h5>
+          <!-- <p class="card-text">With supporting text below as a natural lead-in to additional content.</p> -->
+          <div class="table-responsive ">
+          <!-- <table class="table table-striped"> -->
+            <table class="table table-striped table-class hidden-sm hidden-xs" >
+            <thead  class="cf">
+              <tr>
+                <th scope="col">N°_DT</th>
+                <th scope="col">Nom_Agent</th>
+                <th scope="col">Date_DT</th>
+
+                <th scope="col">Installation</th>
+                <th scope="col">Equipement</th>
+                <th scope="col">Anomalie</th>
+                <th scope = 'col'>Nature d'intervention</th>
+                <th scope="col">Action</th>
+
+              </tr>
+            </thead>
+            <tbody>
+          {% for request in all_work_request %}
+              <tr>
+                <th scope="row">{{ request.number_DT }}</th>
+                <td>{{ request.first_name }} {{ request.last_name }}</td>
+
+                <td>{{ request.date_creation }}</td>
+                <td>{{ request.installation }}</td>
+                <td> {{ request.equipement }}</td>
+                <td>{{request.anomlie }}</td>
+                <td>{{ request.service_conserne }}</td>
+                <td>{{ request.Status }}</td>
+                <td><button type="button" class = "btn btn-success me-1" href="{% url 'handel_view_wr' request.id %}" 
+                  data-bs-toggle="modal"  data-bs-target= "#myModal{{request.id}}">
+                  <i class="fa fa-info-circle fa-lg" aria-hidden="true"></i>
+                </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="myModal{{request.id}}" tabindex="-1" role="dialog" aria-labelledby="myModalCenterTitle" aria-hidden="true">
+                      <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">{{request.installation}}</h5>
+                            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                              <span aria-hidden="true">&times;</span>
+                            </button>
+                          </div>
+                          <div class="modal-body">
+                           <ul class = 'list-unstyled'> 
+                            <li>N°_DT :  <strong>{{request.number_DT}}</strong></li>
+                            <li>Date_DT: <strong>{{request.date_creation}}</strong></li>
+                            <li>Installation : <strong>{{request.equipement}}</strong></li>
+                            <li>Anomalie : <strong>{{request.anomlie}}</strong></li>
+                            <li>Service conserner : <strong>{{request.service_conserne}}</strong></li>
+                            <li>Situation : <strong>{{request.Status}}</strong></li>
+
+
+                           </ul>
+                          </div>
+                          <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                            <button type="button" class="btn btn-primary ">Crée rapport</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <a type="button" class = 'btn btn-warning me-1' href = "{% url 'edit_wr' request.id %}" > <i class="fa fa-pencil-square fa-lg" aria-hidden="true"></i></a>
+                    <button type = "button" class = 'btn btn-danger me-1' data-bs-toggle="modal" data-bs-target = '#delete{{request.id}}'>
+                      <i class = 'fa fa-trash fa-lg'></i></button>
+                      <!--modal delete argumenet -->
+                      <!-- Modal -->
+                      <div class="modal fade" id="delete{{request.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="exampleModalLabel">Confirmation</h5>
+                              <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                              Annuler La Demande N°{{request.number_DT}}
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+                              <form action = "{% url 'delete_wr' request.id %}" method = 'post' value = 'delete'>
+                                {% csrf_token %}
+                             
+                                <button type="submit" class=" btn btn-danger" value = 'delete'>Confirmer</button>
+                              </form>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                </td>
+              </tr>
+          {% endfor %}
+            </tbody>
+          </table>
+        </div>
+        </div>
+      </div>
+
+       {% else %}
+        <h5 class=" alert alert-primary ms-4 me-4">Non demande au'jourduit</h5>
+       {% endif %}
+
+      </div>
+
+    </div>
+  </div>
+
+</div>
+
+{% endblock %}
