--- a/dt/templates/dt/add_wr.html
+++ b/dt/templates/dt/add_wr.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-
+{%block title %} Ajouter Demande de Travaux {% endblock title %}
 {% block content %}
 
 <h3 class="text_center m-4">Nouvelle  Demande</h3>
