--- a/templates/base.html
+++ b/templates/base.html
@@ -4,15 +4,18 @@
     {% load static %}
 
     <head>
-        <title>maingmao</title>
+        <title>{% block title %} MainGMAO {% endblock title %}</title>
 
         <link rel="stylesheet" href="{% static '/font-awesome-4.7.0/css/font-awesome.min.css' %}">
          <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"> 
+
+         
 
     </head>
 
     <body class = 'd-flex flex-column min-vh-100'>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+          {% if user.is_authenticated %}
             <div class="container-fluid">
               <a class="navbar-brand" href="{% url 'handel_work_request' %}"><i class="fa fa-home fa-fw fa-lg" aria-hidden="true"></i>GESTION MAINTENANCE</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -25,15 +28,51 @@
                       <span class="visually-hidden">(current)</span>
                     </a>
                   </li>
+                  {%if perms.dt.add_work_request %}
                   <li class="nav-item">
                     <a class="nav-link" href="{% url 'add_wr' %}"><i class="fa fa-plus fa-lg" aria-hidden="true"></i> Nouvelle  Damande</a>
                   </li>
-
+                  {% endif %}
 
                 </ul>
-  
+                <ul class="navbar-nav ml-auto">
+                  {% if perms.is_staff %}
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'admin:index'%}">
+                      admin_pannel
+                    </a>
+                </li>
+                {% endif %}
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'user-logout'%}">
+                        Déconnecter
+                      </a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'user-registeration' %}">
+                      Ajouter Neuvelle agent
+                    </a>
+                </li>
+              </ul>
+              {% else %}
+                  <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'user_login'%}">
+                        Connecter
+                      </a>
+                  </li>
+                </ul>
+
+
+
+
+         
+              {% endif %}
+
               </div>
+
             </div>
+
           </nav>
 
           {% block content %}
